src/css/figure.css
/* ... */
    .modal-header {
        padding: 10px;
    }
    .modal-body {
        padding: 15px;
        max-height: 450px;
        overflow-y: auto;
    }
    .non-modal-dialog {
        left:auto;
        margin-right: 0;
        padding-top: 0;
        top:55px;
        right: 20px;
        width: 375px;
        z-index: 50;
        pointer-events: none;
        /* restrict height to avoid hidden behind footer */
        position: absolute;
        bottom: 40px;
        height: inherit;
    }
    .tab-pane {
        padding: 10px;
    }
    .btn-group > .btn.dropdown-toggle, .input-group-btn > .btn.dropdown-toggle {
        padding-left: 3px;
        padding-right: 3px;
    }
    .text-group{
        padding-left: 0px;
        padding-right: 0px;
    }
    .navbar-nav > li > a {
        padding-bottom: 12px;
        padding-top: 12px;
    }
    .navbar-fixed-top {
        z-index:100;
    }
    .navbar {
        min-height: 40px;
        padding: 0;
    }
    .navbar>div.container {
        max-width: 100%;
    }
    /** Add my class to boost size of font icons **/
    .icon-buttons {
        margin-right: 20px;
    }
    .icon-buttons .glyphicon {
        font-size: 14px;
    }
    .icon-buttons .btn-sm {
        padding: 4px 9px;
    }
    /* drop-down list uses radio buttons to choose grid gap */
    /* copies from bootstrap .dropdown-menu li a */
    .dropdown-menu li label {
        font-weight: normal;
        display: block;
        padding: 3px 20px;
        white-space: nowrap;
    }
    .dropdown-menu li label:hover{
        color: #ffffff;
        text-decoration: none;
        background-color: #428bca;
    }
    /* hide radio buttons - show tick icon after checked input */
    .dropdown-menu input { display: none; }
    .dropdown-menu input + span { visibility: hidden; }
    .dropdown-menu input:checked + span { visibility: visible; }

    /* Label suggestions styling */
    .label-suggestions-wrap {
        position: relative;
    }

    .label-suggestions {
        position: absolute;
        top: 100%;
        left: 0;
        right: 0;
        margin-top: 30px;
        z-index: 1050;
        min-width: 200px;
    }

    .atop i, .aheight i {
        transform: rotate(90deg);
        display: inline-block;
    }
    .abottom i {
        transform: rotate(270deg);
        display: inline-block;
    }

    .navbar-left .btn-sm {
        font-size: 14px;
        padding: 4px 8px;
    }

    .toggleRoi {
        transition: transform 300ms ease;
        width: 22px;
        font-size: 150%;
        display: block;
        line-height: 16px;
    }
    .rotate90 {
        transform: rotate(90deg);
    }

    @keyframes spin {
        100% { -webkit-transform: rotate(360deg); transform:rotate(360deg); }
    }

    .navbar .bi-arrow-repeat, .imgContainer .bi-arrow-repeat, .spinner {
        animation: spin 2s linear infinite;
        display: inline-block;
    }

    .imgContainer .image_panel_spinner {
        position: relative;
    font-size: 100px;
    left: 50%;
    top: 50%;
    display: block;
    color: #bbb;
    width: min-content;
    padding-right: 2px;
    margin-left: -53px;
    margin-top: -70px;
    }

    .colorpicker span,
    .inset-color span:first-child,
    .fill-color span:first-child,
    .label-color span:first-child,
    .border-color span:first-child,
    .text-color span:first-child,
    .text-background-color span:first-child,
    .shape-color span:first-child {
        border: solid 1px #bbb;
    }

    /* remove border from above */
    .colorpicker .reverseIntensity span {
        border-width: 0;
    }

    .lutOption {
        text-align: left;
    }

    .lutOption span {
        width: 85px;
        display: inline-block;
    }

    .ch_slider .ui-slider-range {
        background-size: 100% 1000px;
        background-position: 0 0;
        background-repeat: no-repeat;
    }

    .lutBg {
        /* NB: when updating png, consider using different name to avoid cache */
        background-size: 100% var(--pngHeight);
        background-image: var(--lutPng);
        background-repeat: no-repeat;
        image-rendering: pixelated;  /* Universal support since 2021 */
    }

    .ch_start_slider::before {
        content: "";
        position: absolute;
        width: 100%;
        height: 100%;
        z-index: -1;
        background-image: var(--lutPng);   /* each lut is 10px high */
        background-size: 100% var(--pngHeight);  /* height is stretched 5x (50px per LUT) */
        background-repeat: no-repeat;
        transform: scaleX(var(--scaleX));
        background-position: var(--bgPos);
        image-rendering: pixelated;
      }

    .channel-btn {
        width: 59px;
        padding-left: 6px;
        padding-right: 6px;
        overflow: hidden;
        white-space: nowrap;
        max-width: 60px;
        height: 36px;
        border-width: 0;
    }

    .font-white {
        color: white;
    }

    .lutPreview {
        /* background-image css add by lutpicker.js */
        width: 100%;
        height: 45px;
        border-top: 1px solid #e5e5e5;
    }

    .small-thumb {
        width: 40px;
        height: 40px;
    }

    .missingThumb {
        background: #eeeeee;
    }

    .table-sort-btn {
        padding-left: 3px;
        padding-right: 3px;
    }

    #figure_files th .btn-sm:first-child {
        padding-right: 0
    }
    #figure_files th .btn-sm:last-child {
        padding-left: 0
    }
    .muted {
        opacity: 0.4;
    }

    #cropViewer {
        width: 500px;
        height: 450px;
        overflow: auto;
        position: relative;
    }

    #crop_paper svg {
        cursor:  crosshair;
        cursor:  url("../images/crop20.png") 10 10, crosshair;
        z-index: 10;
    }

    #crop_paper {
        position: relative !important;
        overflow: visible !important;
        top: auto !important;
        left: auto !important;
        right: auto !important;
        bottom: auto !important;
    }
/* ... */

